updated the active class

--- a/about.html
+++ b/about.html
@@ -36,10 +36,12 @@
           class="logo d-none d-md-block"
         />
         <ul>
-          <li class="active">
+          <li>
             <a href="/" title="Homepage"> Home </a>
           </li>
-          <li><a href="/about.html" title="About Mbalenhle">About</a></li>
+          <li class="active">
+            <a href="/about.html" title="About Mbalenhle">About</a>
+          </li>
           <li><a href="/work.html" title="Mbalenhle's work">Work</a></li>
           <li><a href="/contact.html" title="Contact Mbalenhle">Contact</a></li>
         </ul>
